--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
 @import "tailwindcss";
 
+
+body{
+  font-family: "Winky Sans", sans-serif;
+}
 .mobile {
   display: flex;
   flex-direction: column;
